--- a/index.html
+++ b/index.html
@@ -140,7 +140,21 @@
     </div>
     <hr>
     <footer>
-
+        <div class="footerItem">
+            <h2>Can I use...</h2>
+            <p style="color: #534c3d;">Browser support tables for modern web technologies</p>
+            <p>Created & maintained by <span class="btn">@Fyrd</span>, design by <span class="btn">@Lensco</span>.</p>
+            <p>Support data contributions by the GitHub <span class="btn">community</span>.</p>
+            <p>Usage share statistics by <span class="btn">StatCounter GlobalStats</span> for February, 2023</p>
+            <p>
+                Location detection provided by <span class="btn">ipinfo.io</span>.
+                <img src="https://caniuse.com/img/browserstack.svg" height="30px" alt="" style="margin-left: 20;">
+            </p>
+            
+        </div>
+        <div class="footerItem"></div>
+        <div class="footerItem"></div>
+        <div class="footerItem"></div>
     </footer>
     <script>
         let array = ["If a feature you're looking for is not available on the site, you can vote to have it included. Better yet, if you've done the research you can even submit it yourself!",
